--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
@@ -4,6 +4,28 @@
     margin-right: -95px;
   }
 }
+.class-choose .animate-repeat.ng-enter,
+.class-choose .animate-repeat.ng-leave {
+  -webkit-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  -moz-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  -ms-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  -o-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
+  position: relative;
+  display: block;
+}
+.class-choose .animate-repeat.ng-enter.ng-enter-active,
+.class-choose .animate-repeat.ng-leave {
+  opacity: 1;
+  top: 0;
+  height: 30px;
+}
+.class-choose .animate-repeat.ng-leave.ng-leave-active,
+.class-choose .animate-repeat.ng-enter {
+  opacity: 0;
+  top: -50px;
+  height: 0px;
+}
 .class-choose .title h2 {
   text-align: center;
   margin: 0 auto;
