--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -6,6 +6,34 @@
         margin-right: -@widthOfChat;
     }
 
+    .animate-repeat {
+        &.ng-enter,
+        &.ng-leave {
+            -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+            position: relative;
+            display: block;
+        }
+
+        &.ng-enter.ng-enter-active,
+        &.ng-leave {
+            opacity: 1;
+            top: 0;
+            height: 30px;
+        }
+
+        &.ng-leave.ng-leave-active,
+        &.ng-enter {
+            opacity: 0;
+            top: -50px;
+            height: 0px;
+        }
+    }
+
+
     .title h2 {
         text-align: center;
         margin: 0 auto;
