--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/staticPage.css
@@ -1481,6 +1481,50 @@ iframe {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
+#main-accordion input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+}
+#main-accordion input[type="radio"]:checked + label {
+  background-color: #4190b9;
+}
+#main-accordion label {
+  position: relative;
+  display: block;
+  cursor: pointer;
+}
+#main-accordion section {
+  max-height: 0;
+  transition: max-height 0.1s ease-out;
+  overflow: hidden;
+}
+#main-accordion .toggle-level-1:checked ~ .content-level-1,
+#main-accordion .toggle-level-2:checked ~ .content-level-2 {
+  transition: max-height 0.1s ease-in;
+  max-height: 100vh;
+}
+#main-accordion .category-wrapper {
+  background: white;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+}
+#main-accordion .category-wrapper:not(:last-child) {
+  margin-bottom: 10px;
+}
+#main-accordion .category-wrapper label {
+  color: white;
+  padding: 10px;
+  background: #888b8e;
+  display: block;
+  border-radius: 10px;
+  margin-bottom: 0;
+}
+#main-accordion .category-wrapper input:checked ~ section {
+  padding: 10px;
+}
+#main-accordion .category-wrapper input:checked ~ label {
+  border-radius: 10px 10px 0 0;
+}
 /*#region cssCheck*/
 #cssCheck {
   position: absolute;
