Center of toaster.

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -456,6 +456,10 @@ body {
         height: 20px;
     }
 }
+.md-center {
+        left: 50%;
+        transform: translate3d(-50%, 0, 0);
+    }
 
 /*.create-box {
 
