--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
@@ -35,9 +35,9 @@
         @* ReSharper disable once Mvc.PartialViewNotResolved *@
         @{ Html.RenderPartial("_Leaderboard", DashboardResource.LeaderboardTitle);}
     </div>
-    <div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-sm="50" class="flex" flex="100">
+    @*<div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-sm="50" class="flex" flex="100">
         @{ Html.RenderPartial("_Gamification");}
-    </div>
+    </div>*@
     <div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-xs="100" flex-sm="50" ng-repeat="e in d.boxes track by e.id" class="flex">
         <div class="box-cube">
             <div ng-include="'box-template.html'"></div>
@@ -56,9 +56,9 @@
             </md-menu>
         </div>
     </div>
-    <div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-xs="100" flex-sm="50" ng-repeat="e in ::d.suggested" class="flex">
+    @*<div flex-lg="33" flex-gt-lg="25" flex-md="50" flex-xs="100" flex-sm="50" ng-repeat="e in ::d.suggested" class="flex">
         <div class="box-cube">
             <div ng-include="'box-template.html'"></div>
         </div>
-    </div>
+    </div>*@
 </div>
