course choose new design

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -16,7 +16,9 @@ em {
 
 
 
-
+.vs-repeat-before-content, .vs-repeat-after-content {
+  display: block;
+}
 
 input[type="search"] {
     -moz-box-sizing: border-box;
