--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -12,7 +12,7 @@
         <h2 ng-switch-when="7">@UniversityResources.OnboardingHeaderStep7</h2>
         <h2 ng-switch-when="8">@UniversityResources.OnboardingHeaderStep8</h2>*@
 </div>
-<div ng-if="!cc.showCreateClass">
+<div class="search-container" ng-if="!cc.showCreateClass">
     <div class="top">
         <form class="search-form" name="classChooseFrom" novalidate ng-submit="cc.classSearch()" layout="row" layout-wrap>
             <input spellcheck="false" autofocus type="search" placeholder="@UniversityResources.OnboardingSearchContainer"
@@ -21,14 +21,26 @@
                 <md-icon md-svg-icon="t:searchIcon"></md-icon>
             </button>
         </form>
-        <button type="button" ng-click="cc.status($event)">THIS IS PIC</button>
+        <div class="selected-classes">
+            <button type="button" ng-click="cc.status($event)">1</button>
+            <button type="button" ng-click="cc.status($event)">2</button>
+            <button type="button" ng-click="cc.status($event)">3</button>
+            <button type="button" ng-click="cc.status($event)">4</button>
+            <button type="button" ng-click="cc.status($event)">5</button>
+            <button type="button" ng-click="cc.status($event)">6</button>
+        </div>
     </div>
-    <ol class="results" layout="row" layout-wrap flex="100" flex-gt-md="80" flex-xs="100" >
-        <li flex="33" flex-xs="100" class="angular-animate animate-repeat" ng-repeat="(key,value) in cc.departmentWithBoxes track by key">
-            <div class="department-name ellipsis" ng-bind="::key"></div>
-            <ol class="department-courses">
-                <li ng-style="{color: c.selected ? 'red' : 'initial'}" class="angular-animate animate-repeat" ng-repeat="c in value track by c.id">
-                    <div ng-bind="::c.name" ng-click="cc.choose(c)" class="ellipsis"></div>
+    <ol class="results list-unstyled" layout="row" layout-wrap flex="100" flex-gt-md="80" flex-xs="100" >
+        <li flex="100" flex-xs="100" flex-gt-xs="50" flex-md="33" flex-gt-md="25" class="angular-animate animate-repeat" ng-repeat="(key,value) in cc.departmentWithBoxes track by key">
+            <div class="title">
+                <div class="department-name ellipsis" ng-bind="::key" d-color="{{::key.length}}"></div>
+                <div class="lock">
+                    <md-icon md-svg-icon="t:closed-lock" class="lock"></md-icon>
+                </div>
+            </div>
+            <ol class="department-courses list-unstyled">
+                @*<div ng-bind="::c.name" ng-click="cc.choose(c)" class="ellipsis"></div>*@
+                <li ng-style="{color: c.selected ? 'red' : 'initial'}" class="angular-animate animate-repeat" ng-repeat="e in value track by e.id" ng-include="'slim-box-template.html'">
                 </li>
             </ol>
         </li>
@@ -39,7 +51,7 @@
         <button type="button" class="create-class action-btn" ng-click="cc.goCreateClass()">@UniversityResources.OnboardingCreateClass</button>
     </div>
 </div>
-<div class="create-box" ng-if="cc.showCreateClass">
+<div ng-if="cc.showCreateClass">
     @*<div class="box-style" flex="50" flex-xs="100">
         <h2 class="department ellipsis" d-color="{{::cc.selectedDepartment.name.length}}" ng-bind="::cc.selectedDepartment.name"></h2>
     </div>*@
@@ -93,6 +105,20 @@
 <script type="text/ng-template" id="dialog.tmpl.html">
     <div>hello</div>
 </script>
+
+<script defer type="text/ng-template" id="slim-box-template.html">
+    <button class="box-template box-style slim" ga-track-event="['course-choose', 'box']">
+        <div class="icon background" d-color="{{::key.length}}" ng-bind="::e.name.substr(0,2)"></div>
+        <div class="data">
+            <h5 class="name ellipsis" d-color="{{::key.length}}" ng-bind="::e.name"></h5>
+            <div class="metadata">
+                <div class="code ellipsis" ng-bind="::e.courseCode"></div>
+                <div class="professor ellipsis" ng-bind="::e.professor"></div>
+            </div>
+        </div>
+    </button>
+</script>
+
 @*<div ng-switch="cc.step">
     <div ng-switch-when="1" class="content default">
         <div class="search-image">
